--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title:              Clean Blog
-email:              your-email@example.com
+title:              Jack High Bowls
+email:              reece@jackhighbowls.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
 baseurl:            "/jhb"
 url:                "https://krussll.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    
+facebook_username:  
 instagram_username:  
 linkedin_username:
 
