--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              Jack High Bowls
 email:              reece@jackhighbowls.com
 description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
+author:             Reece Williams
 baseurl:            "/jhb"
 url:                "https://krussll.github.io"
 
