--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Jack High Bowls
 email:              reece@jackhighbowls.com
-description:        A Blog Theme by Start Bootstrap
+description:        Best Lawn Bowls
 author:             Reece Williams
 baseurl:            "/jhb"
 url:                "https://krussll.github.io"
