--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Jack High Bowls
 email:              reece@jackhighbowls.com
-description:        Best Lawn Bowls
+description:        Bringing you the best online bowls reviews and guides for players of all abilities. Improve your game with the best equipment, tips and tricks covering Indoor, Lawn and Crown Green Bowls
 author:             Reece Williams 
 baseurl:            "/jhb"
 url:                "https://krussll.github.io" 
